K8s/namespace-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-dev
  labels:
    env: dev
