K8s/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  namespace: spring-boot-dev
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      namespace: spring-boot-dev
      labels:
        app: spring-boot-app
    spec:
      restartPolicy: Always
      containers:
      - name: spring-boot-app
        image: papamedo/docker-spring-boot-image:1.2
        resources:
          limits:
            memory: 1Gi
            cpu: "500m"
        ports:
        - containerPort: 9876
