K8s/statefulset-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spring-boot-db
  namespace: spring-boot-dev
  labels:
    app: spring-boot-db
spec:
  serviceName: spring-boot-db
  selector:
    matchLabels:
      app: spring-boot-db
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-boot-db
    spec:
      containers:
        - name: spring-boot-db
          image: postgres:13.1-alpine
          ports:
            - containerPort: 5432
              name: "postgres"
          resources:
            limits:
              memory: 1Gi
              cpu: "2"
          volumeMounts:
            - name: spring-boot-db-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: spring-boot-db-volume
          persistentVolumeClaim:
            claimName: spring-boot-db-volume-claim
