K8s/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-svc
  namespace: spring-boot-dev
  labels:
    app: spring-boot-app-svc
spec:
  type: ClusterIP
  selector:
    app: spring-boot-app
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 9876
