K8s/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentweb
  namespace: spring-boot-dev
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /courses
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port:
              number: 8080
      - path: /grades
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port:
              number: 8080
      - path: /teachers
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port:
              number: 8080
      - path: /listCourses
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port:
              number: 8080
      - path: /createStudent
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port:
              number: 8080
      - path: /addStudent
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port:
              number: 8080
      - path: /studentEnrollmentSummary
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port:
              number: 8080
